[lib]
proc-macro = true

[package]
name = "unstringify"
version = "0.1.4-rc1"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
edition = "2018"

description = """
    Procedural macro implemention of the reverse operation of `stringify!`
"""
readme = "README.md"

keywords = [
    "proc-macro",
    "stringify",
    "tokenize",
    "preprocessor",
]

categories = [
    "rust-patterns",
]

license = "Zlib OR MIT OR Apache-2.0"

documentation = "https://docs.rs/unstringify"
repository = "https://github.com/danielhenrymantilla/unstringify.rs"
homepage = "https://crates.io/crates/unstringify"
